res/examples/invalid/call_noncallable_number_using_variable.eg
let n = 12345;

n();

// out: TypeError: number is not callable